--- a/Het_Project/Finale_versie/Finale_versie.runs/impl_1/usage_statistics_webtalk.html
+++ b/Het_Project/Finale_versie/Finale_versie.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Dec 23 18:47:13 2025</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Dec 31 17:04:43 2025</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>809a48e246bd469a88711b6b646e89ab</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>37</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>8aae293a6f124a90830977c5c90298c8</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>39</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>5e692ec601375f5987d513c7d88e299c</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>5e692ec601375f5987d513c7d88e299c</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -32,95 +32,128 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>abstractcombinedpanel_remove_selected_elements=1</TD>
-   <TD>basedialog_cancel=16</TD>
+   <TD>basedialog_cancel=18</TD>
    <TD>basedialog_no=1</TD>
-   <TD>basedialog_ok=116</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=53</TD>
-   <TD>cmdmsgdialog_ok=6</TD>
+   <TD>basedialog_ok=134</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=55</TD>
+   <TD>closeplanner_yes=3</TD>
+   <TD>cmdmsgdialog_ok=7</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>createsrcfiledialog_file_name=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_type=9</TD>
-   <TD>filesetpanel_file_set_panel_tree=241</TD>
-   <TD>filesetpanel_messages=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=13</TD>
+   <TD>createsrcfiledialog_file_type=11</TD>
+   <TD>defaultoptionpane_close=1</TD>
+   <TD>filesetpanel_file_set_panel_tree=309</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_messages=1</TD>
    <TD>filtertoolbar_show_all=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=126</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=173</TD>
    <TD>fpgachooser_fpga_table=1</TD>
-   <TD>fpgachooser_package=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_package=1</TD>
    <TD>fpgachooser_speed=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>graphicalview_zoom_fit=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=1</TD>
    <TD>hcodeeditor_close=1</TD>
    <TD>hcodeeditor_search_text_combo_box=4</TD>
    <TD>hfolderchooserhelpers_up_one_level=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchpanel_dont_show_this_dialog_again=1</TD>
-   <TD>mainmenumgr_file=26</TD>
-   <TD>mainmenumgr_open_recent_project=11</TD>
-   <TD>mainmenumgr_project=16</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_unselect_type=2</TD>
-   <TD>mainmenumgr_view=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hpopuptitle_close=1</TD>
+   <TD>launchpanel_dont_show_this_dialog_again=1</TD>
+   <TD>mainmenumgr_file=28</TD>
+   <TD>mainmenumgr_flow=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_open_recent_project=12</TD>
+   <TD>mainmenumgr_project=18</TD>
+   <TD>mainmenumgr_settings=1</TD>
+   <TD>mainmenumgr_unselect_type=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_view=6</TD>
    <TD>mainwinmenumgr_layout=4</TD>
    <TD>mainwinmenumgr_load=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=32</TD>
+   <TD>msgtreepanel_message_view_tree=32</TD>
+</TR><TR ALIGN='LEFT'>   <TD>netlistschmenuandmouse_expand_collapse=3</TD>
+   <TD>netlistschmenuandmouse_view=5</TD>
+   <TD>netlisttreeview_netlist_tree=5</TD>
    <TD>numjobschooser_number_of_jobs=3</TD>
-   <TD>pacommandnames_add_sources=5</TD>
-   <TD>pacommandnames_auto_connect_target=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=7</TD>
+   <TD>pacommandnames_auto_connect_target=12</TD>
+   <TD>pacommandnames_auto_update_hier=6</TD>
+   <TD>pacommandnames_bel_const_mode=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_export_schematic=1</TD>
    <TD>pacommandnames_open_hardware_manager=12</TD>
-   <TD>pacommandnames_save_project_as=8</TD>
+   <TD>pacommandnames_save_project_as=9</TD>
+   <TD>pacommandnames_set_as_top=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run=3</TD>
+   <TD>pacommandnames_simulation_run_behavioral=10</TD>
    <TD>pacommandnames_toggle_view_nav=2</TD>
+   <TD>pacommandnames_zoom_fit=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_code=16</TD>
+   <TD>paviews_device=4</TD>
+   <TD>paviews_flow_navigator=1</TD>
    <TD>paviews_ip_catalog=1</TD>
-   <TD>paviews_project_summary=24</TD>
-   <TD>programdebugtab_open_target=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=42</TD>
-   <TD>programdebugtab_refresh_device=1</TD>
-   <TD>programfpgadialog_program=43</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=34</TD>
+   <TD>paviews_schematic=4</TD>
+   <TD>programdebugtab_open_target=11</TD>
+   <TD>programdebugtab_program_device=44</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_refresh_device=1</TD>
+   <TD>programfpgadialog_program=46</TD>
    <TD>progressdialog_cancel=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectdashboardview_dashboard=1</TD>
-   <TD>projectdashboardview_tabbed_pane=1</TD>
+   <TD>projectdashboardview_dashboard=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectdashboardview_tabbed_pane=1</TD>
    <TD>projectnamechooser_choose_project_location=2</TD>
-   <TD>projectnamechooser_project_name=12</TD>
+   <TD>projectnamechooser_project_name=13</TD>
+   <TD>rdicommands_delete=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_reset_layout=1</TD>
+   <TD>rdiviews_waveform_viewer=3</TD>
    <TD>removesourcesdialog_also_delete=1</TD>
    <TD>saveprojectutils_dont_save=1</TD>
-   <TD>saveprojectutils_save=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=10</TD>
+   <TD>saveschematicdialog_specify_output_pdf_file=1</TD>
+   <TD>schmenuandmouse_expand_cone=2</TD>
+   <TD>schmenuandmouse_save_as_pdf_file=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
    <TD>srcchooserpanel_add_or_create_source_file=2</TD>
-   <TD>srcchooserpanel_create_file=10</TD>
+   <TD>srcchooserpanel_create_file=12</TD>
    <TD>srcchoosertable_src_chooser_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=6</TD>
    <TD>stalerundialog_no=1</TD>
-   <TD>syntheticagettingstartedview_recent_projects=8</TD>
-   <TD>syntheticastatemonitor_cancel=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=2</TD>
+   <TD>stalerundialog_run_synthesis=1</TD>
+   <TD>syntheticagettingstartedview_recent_projects=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=4</TD>
+   <TD>taskbanner_close=7</TD>
+   <TD>waveformnametree_waveform_name_tree=26</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=8</TD>
-   <TD>autoconnecttarget=10</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=10</TD>
+   <TD>autoconnecttarget=12</TD>
    <TD>closeproject=1</TD>
    <TD>coreview=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>editcopy=1</TD>
-   <TD>editdelete=2</TD>
-   <TD>launchprogramfpga=43</TD>
+   <TD>editdelete=3</TD>
+   <TD>launchprogramfpga=46</TD>
    <TD>newproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=27</TD>
-   <TD>openrecenttarget=7</TD>
-   <TD>programdevice=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=30</TD>
+   <TD>openrecenttarget=8</TD>
+   <TD>programdevice=5</TD>
    <TD>resetlayout=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=58</TD>
-   <TD>savefileproxyhandler=2</TD>
-   <TD>saveprojectas=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=61</TD>
+   <TD>runschematic=7</TD>
+   <TD>runsynthesis=1</TD>
+   <TD>savefileproxyhandler=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectas=9</TD>
+   <TD>settopnode=4</TD>
    <TD>showview=15</TD>
+   <TD>simulationrun=10</TD>
 </TR><TR ALIGN='LEFT'>   <TD>toggleviewnavigator=6</TD>
    <TD>toolssettings=3</TD>
    <TD>viewlayoutcmd=1</TD>
-   <TD>viewtaskimplementation=2</TD>
+   <TD>viewtaskimplementation=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>viewtaskprogramanddebug=1</TD>
-   <TD>viewtaskprojectmanager=19</TD>
+   <TD>viewtaskprojectmanager=22</TD>
+   <TD>viewtaskrtlanalysis=3</TD>
+   <TD>viewtasksynthesis=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>zoomfit=3</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=10</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=17</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -144,7 +177,7 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=0</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=10</TD>
    <TD>simulator_language=Mixed</TD>
    <TD>srcsetcount=7</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
@@ -719,10 +752,20 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:03:09s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:02:26s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=1009.891MB</TD>
-    <TD>memory_peak=1307.820MB</TD>
+    <TD>memory_gain=1008.723MB</TD>
+    <TD>memory_peak=1306.727MB</TD>
+</TR>   </TABLE>
+   </TD></TR>
+  </TABLE><BR>
+ <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>xsim</B></TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>-sim_mode=default::behavioral</TD>
+    <TD>-sim_type=default::</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
